--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
     let curUser = null;
     let userData = null;
 
-    // بيانات الريبورتات التي تم إضافتها
     const repData = {
         reportr: ["يرجى شرح مشكلتك لكي يتم خدمتك", "توجه للدعم الفني مع مايثبت ذلك", "سيتم خدمتك الان", "هل تم خدمتك بالشكل المطلوب؟", "سيتم التاكد من الموضوع , كذللك احتياطًا يرجى منك حفظ تصويرك اخر 20 دقيقه في حال الاحتياج له سيتم استدعائك"],
         summon: ["استدعاء يخص المراقبة الدورية توجه للدعم مع تصوير 20 دقيقة", "احفظ تصوير اخر 20 دقيقه من الان وبعد الانتهاء من السيناريو توجه لدعم الفني مباشره", "استدعاء توجه للدعم الفني مع تصوير اخر 20 دقيقه"],
@@ -257,7 +256,6 @@
         general: ["يجب عليك طلب ومسعف والانتظار , ويمنع نقل المسقط بدون طلب مسعف , خلاف ذلك بيتم محاسبتك اداريًا", "يمنع منعًا باتًا معالجة شخص في حال تواجد المسعفين لتجنب المحاسبة الادارية", "في حال إزالة اربع من اطارات السيارة يمنع استكمال القيادة بها", "يمنع حمل اللاعب اثناء ركوب الدباب ايضًا المركبة", "يمنع إرتداء او إستعمال اي خوذة اثناء مشاركتك في اي إطلاق ناري", "يمنع الكذب بالمصطلحات الاتية ( سحر او باخذ حبة او صداع والخ ) .. يعرضك للمحاسبة الادارية", "يمنع منعًا باتًا القيام بأي أعمال ( التقديح والاسلوب السيء ) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنبًا للمحاسبة الادارية .. إدارة ميستري تاون تتمنى لك يومًا ممتعًا", "يمنع عليك تكرار البلاغات والسبام بالبلاغات العسكرية او الصحة , في حال تكرارها سيتم محاسبتك اداريًا"]
     };
 
-    // --- Modal System ---
     window.showAlert = (title, msg, type = 'ok', onConfirm = null, customHtml = null) => {
         document.getElementById('modalTitle').innerText = title;
         document.getElementById('modalBody').innerHTML = customHtml ? customHtml : `<p>${msg}</p>`;
@@ -276,7 +274,6 @@
     };
     window.closeModal = () => document.getElementById('sysModal').style.display = 'none';
 
-    // --- Auth Observer ---
     onAuthStateChanged(auth, async (user) => {
         if (user) {
             curUser = user;
@@ -302,7 +299,6 @@
         loadRepCategories();
     }
 
-    // --- Admin Functions ---
     window.fetchUsersList = async () => {
         const listDiv = document.getElementById('adminUserList');
         listDiv.innerHTML = 'جاري التحميل...';
@@ -332,7 +328,6 @@
         } catch(e) { showAlert("خطأ", "فشل التحديث"); }
     };
 
-    // --- Activation & Questions ---
     window.toggleQOptions = () => {
         document.getElementById('multipleOptions').classList.toggle('hidden', document.getElementById('qType').value !== 'multiple');
     };
@@ -364,7 +359,6 @@
         }
     };
 
-    // --- Counters ---
     window.addCounter = async () => {
         const n = document.getElementById('counterName').value, g = parseInt(document.getElementById('counterGoal').value);
         if (!n || !g) return;
@@ -390,7 +384,6 @@
         });
     };
 
-    // --- Listeners ---
     function initListeners() {
         onSnapshot(query(collection(db, "users", curUser.uid, "counters"), orderBy("createdAt", "asc")), (snap) => {
             const list = document.getElementById('countersList'); list.innerHTML = '';
@@ -417,7 +410,15 @@
         onSnapshot(query(collection(db, "users", curUser.uid, "notes"), orderBy("createdAt", "desc")), (snap) => {
             const list = document.getElementById('notesList'); list.innerHTML = '';
             snap.forEach(d => {
-                list.innerHTML += `<div class="card"><pre style="white-space:pre-wrap; font-family:Cairo;">${d.data().t}</pre><button class="btn btn-danger" style="padding:5px" onclick="delGen('notes', '${d.id}')">حذف</button></div>`;
+                const note = d.data();
+                list.innerHTML += `<div class="card">
+                    <pre id="noteText_${d.id}" style="white-space:pre-wrap; font-family:Cairo; font-size:0.9rem;">${note.t}</pre>
+                    <div style="display: flex; gap: 10px; margin-top: 10px;">
+                        <button class="btn btn-primary" style="padding:5px; font-size:0.7rem;" onclick="editNotePrompt('${d.id}', \`${note.t}\`)">تعديل ✏️</button>
+                        <button class="btn btn-success" style="padding:5px; font-size:0.7rem;" onclick="copyNote(\`${note.t}\`)">نسخ 📋</button>
+                        <button class="btn btn-danger" style="padding:5px; font-size:0.7rem;" onclick="delGen('notes', '${d.id}')">حذف 🗑️</button>
+                    </div>
+                </div>`;
             });
         });
 
@@ -430,7 +431,6 @@
         });
     }
 
-    // --- Global Helpers ---
     window.nav = (id) => {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         document.getElementById(id + 'Page').classList.add('active');
@@ -489,7 +489,6 @@
         });
     }
 
-    // --- نظام الريبورتات المحدث ---
     window.loadRepCategories = () => {
         const sel = document.getElementById('repCat'); if(!sel) return;
         sel.innerHTML = '<option value="">-- اختر التصنيف --</option>';
@@ -502,8 +501,14 @@
             gangs: "عصابات",
             general: "قوانين عامة"
         };
-        for (let key in repData) {
-            sel.innerHTML += `<option value="${key}">${cats[key] || key}</option>`;
+        
+        // تعديل: إذا كانت الرتبة Support يظهر له "استدعاءات" فقط
+        if(userData && userData.role === 'Support') {
+            sel.innerHTML += `<option value="summon">استدعاءات</option>`;
+        } else {
+            for (let key in repData) {
+                sel.innerHTML += `<option value="${key}">${cats[key] || key}</option>`;
+            }
         }
     };
 
@@ -518,20 +523,19 @@
         }
     };
 
+    // تعديل: زر النسخ يضيف /reportr id تلقائياً للنسخ الداخلي
     window.copyReport = async (mode) => {
         const id = document.getElementById('repId').value;
         const disc = document.getElementById('repDiscord').value;
         const msg = document.getElementById('repSub').value;
-        const cat = document.getElementById('repCat').value;
 
         if (!msg) return showAlert("تنبيه", "الرجاء اختيار رسالة");
 
         let text = "";
         if (mode === 'in') {
-            // نسخ داخل السيرفر (يدعم أمر reportr)
-            text = (cat === 'reportr') ? `/reportr ${id} ${msg}` : msg;
+            if (!id) return showAlert("تنبيه", "الرجاء كتابة ID اللاعب للنسخ داخل السيرفر");
+            text = `/reportr ${id} ${msg}`;
         } else {
-            // نسخ خارج السيرفر (منشن ديسكورد)
             text = `${msg} \n <@${disc}>`;
         }
 
@@ -539,7 +543,7 @@
             await navigator.clipboard.writeText(text);
             showAlert("تم النسخ ✅", "بنجاح");
         } catch (e) {
-            showAlert("خطأ", "فشل النسخ التلقائي، جرب يدوياً");
+            showAlert("خطأ", "فشل النسخ التلقائي");
         }
     };
 
@@ -547,6 +551,26 @@
         const t = document.getElementById('noteInput').value;
         if (t) await addDoc(collection(db, "users", curUser.uid, "notes"), { t, createdAt: Date.now() });
         document.getElementById('noteInput').value = '';
+    };
+
+    // وظائف الملاحظات الجديدة (تعديل ونسخ)
+    window.copyNote = async (text) => {
+        await navigator.clipboard.writeText(text);
+        showAlert("تم النسخ", "تم نسخ الملاحظة إلى الحافظة");
+    };
+
+    window.editNotePrompt = (id, oldText) => {
+        const html = `<textarea id="editNoteArea" rows="5">${oldText}</textarea><button class="btn btn-primary" onclick="saveNoteEdit('${id}')">حفظ التغييرات</button>`;
+        showAlert("تعديل الملاحظة", "", "ok", null, html);
+    };
+
+    window.saveNoteEdit = async (id) => {
+        const newT = document.getElementById('editNoteArea').value;
+        try {
+            await updateDoc(doc(db, "users", curUser.uid, "notes", id), { t: newT });
+            closeModal();
+            showAlert("تم", "تم تحديث الملاحظة");
+        } catch(e) { showAlert("خطأ", "فشل التحديث"); }
     };
 
     window.sendAnnouncement = async () => {
