--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANWAR CLOUD | الـنـسـخـة الاحـتـرافـيـة</title>
+    <title>ANWAR CLOUD</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -608,4 +608,5 @@
 </script>
 </body>
 </html>
+
 
