--- a/index.html
+++ b/index.html
@@ -630,8 +630,8 @@
         const cat = document.getElementById('repCategory').value;
         const box = document.getElementById('reasonsBox'); box.innerHTML = '';
         const reportsMap = {
-            "reportr": ["يرجى شرح مشكلتك لكي يتم خدمتك", "توجه للدعم الفني مع مايثبت ذلك", "سيتم خدمتك الان", "هل تم خدمتك بالشكل المطلوب؟"],
-            "summon": ["استدعاء يخص المراقبة الدورية", "احفظ تصوير آخر 20 دقيقة", "استدعاء توجه للدعم الفني"],
+            "reportr": ["سيتم التاكد من الموضوع , كذللك احتياطًا يرجى منك حفظ تصويرك اخر 20 دقيقه في حال الاحتياج له سيتم استدعائك  " , "يرجى شرح مشكلتك لكي يتم خدمتك", "توجه للدعم الفني مع مايثبت ذلك", "سيتم خدمتك الان", "هل تم خدمتك بالشكل المطلوب؟"],
+            "summon": ["استدعاء يخص المراقبة الدورية توجه للدعم مع تصوير 20 دقيقة", " احفظ تصوير اخر 20 دقيقه من الان وبعد الانتهاء من السيناريو توجه لدعم الفني مباشره", " استدعاء توجه للدعم الفني مع تصوير اخر 20 دقيقه  "],
             "steam": ["الرجاء تغيير اسم ستيمك وفايف ام مطابقاً للدسكورد"],
             "clothes": ["يجب عليك لبس مناسب للمكان", "تغيير لبسك لمواكبة الأربي", "يجب عليك لبس حذاء"],
             "rp": ["إيقاف مركبتك في مناطق آمنة", "تقدير موقفك في الأربي", "يمنع التلميح خارج الأربي"],
@@ -856,3 +856,4 @@
 </script>
 </body>
 </html>
+
