--- a/index.html
+++ b/index.html
@@ -632,11 +632,11 @@
         const reportsMap = {
             "reportr": ["سيتم التاكد من الموضوع , كذللك احتياطًا يرجى منك حفظ تصويرك اخر 20 دقيقه في حال الاحتياج له سيتم استدعائك  " , "يرجى شرح مشكلتك لكي يتم خدمتك", "توجه للدعم الفني مع مايثبت ذلك", "سيتم خدمتك الان", "هل تم خدمتك بالشكل المطلوب؟"],
             "summon": ["استدعاء يخص المراقبة الدورية توجه للدعم مع تصوير 20 دقيقة", " احفظ تصوير اخر 20 دقيقه من الان وبعد الانتهاء من السيناريو توجه لدعم الفني مباشره", " استدعاء توجه للدعم الفني مع تصوير اخر 20 دقيقه  "],
-            "steam": ["الرجاء تغيير اسم ستيمك وفايف ام مطابقاً للدسكورد"],
-            "clothes": ["يجب عليك لبس مناسب للمكان", "تغيير لبسك لمواكبة الأربي", "يجب عليك لبس حذاء"],
-            "rp": ["إيقاف مركبتك في مناطق آمنة", "تقدير موقفك في الأربي", "يمنع التلميح خارج الأربي"],
-            "crime": ["يجب أن يكون التهديد مباشر", "يمنع الحلف بأي طريقة", "يمنع افتعال الفايت بدون سبب"],
-            "general": ["يمنع تكرار البلاغات والسبام", "يمنع الكذب بالمصطلحات (سحر/صداع)", "يمنع المعالجة في حال وجود مسعف"]
+            "steam": ["الرجاء منك تغيير اسم ستيمك وفايف ام ويكون مطابق لاسم الدسكورد الخاص بك , وعدم تسميته ب اسم عربي او ارقام او زخرفة .. ادارة مستري تاون تتمنى لك يوم ممتع"],
+            "clothes": [ "يجب عليك تعديل ملابسك لتتناسب مع وظيفتك، لتجنب المحاسبة الإدارية" , "يرجى منك التوجه لاقرب محل ملابس و تغير الحزام بسبب انه خاص للعساكر فقط و اداره ميستري تاون تتمني لك وقتا ممتعا " , "يجب عليك تغيير لبسك و عدم مخالفة تعميم الملابس لتجنب المحاسبة الادارية" , "يجب عليك لبس مناسب للمكان و تطبيق الاربي المناسب للمكان", "يجب عليك تغيير لبسك و مواكبة الأربي بإرتداء لبس مناسب لتجنب المحاسبة الادارية , ادارة مستري  تتمنى لك يوم ممتع", "يجب عليك لبس حذاء لتجنب المحاسبة الادارية , ادارة مستري  تتمنى لك يوم ممتع"],
+            "rp": [ "يجب عليك ايقاف مركبتك بالشكل المناسب في المناطق الامنة تجنبا للمحاسبة الادارية , ادارة ميستري تاون تتمنى لك يوما ممتعا" , "يجب عليك تقدير موقفك في اي حالة كنت متواجد فيها وقياسها بالحياة الواقعيه, وادارة مستري تاون تتمنى لك يوم ممتع", "يجب عليك تقدير موقفك وتقمص شخصية المصاب وقياسها بالحياة الواقعيه .ادارة مستري تاون تتمنى لك يوم ممتع", " يمنع منعا باتا الخروج عن الرول بلاي او التلميح خارج الار بي لتجنب المحاسبة الادارية"],
+            "crime": [ "يجب ان يكون التهديد بشكل مباشر و يمنع التهديد من داخل المركبة" , "يمنع الحلف باي طريقة كانت ويجب عليك تقمص الحياة الواقعيه وابعاد امور الدين بشكل عام تجنباً للمحاسبة الاداريه، وادارة مستري تاون تتمنى لك وقتاً ممتعاً" , "يجب عليك تقدير قيمة مركبتك والقيادة بشكل سليم و تجنب النقزات الغير واقعية, وتقدير حياتك وعدم صدم الاخريين , ادارة مستري تاون تتمنى لك يومأ ممتعأ" , " يمنع منعاً باتاً القيام بأي أعمال (التقديح والاسلوب السيء) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنباً للمحاسبة الادارية ، وادارة مستري تاون تتمنى لك وقتاً ممتعاً ", "يمنع منعاً باتا التخريم او اطلاق النار خلف الجدران لتجنب المحاسبة الادارية ", "يمنع اعطاء كول والتكلم باريحيه وانت مسقط , ويجب عليك تقمص دور المصاب , تجنبا من المحاسبة الادارية", "عزيزي اللاعب يجب عليك التخطيط قبل بدء السرقة ومع التأكد من العدد المشاكرين بالسيناريو , ادارة مستري  تتمنى لك يوم ممتع" , "عزيزي المواطن , للتذكير يمنع كلبشة شخص بدون رفع اليد ويجب عليك الانتظار , خلاف ذالك بيتم محاسبتك بمحاسبة اداريا صارمه"],
+            "general": [ "يمنع عليك تكرار البلاغات والسبام بالبلاغات العسكرية او الصحة , في حال تكرارها سيتم محاسبتك اداريًا" , "يمنع منعًا باتًا القيام بأي أعمال ( التقديح والاسلوب السيء ) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنبًا للمحاسبة الادارية .. إدارة ميستري تاون تتمنى لك يومًا ممتعًا" , "يمنع الكذب بالمصطلحات الاتية ( سحر او باخذ حبة او صداع والخ ) .. يعرضك للمحاسبة الادارية" , "يمنع إرتداء او إستعمال اي خوذة اثناء مشاركتك في اي إطلاق ناري" , "يمنع حمل اللاعب اثناء ركوب الدباب ايضًا المركبة" , "في حال إزالة اربع من اطارات السيارة يمنع استكمال القيادة بها", "يمنع منعًا باتًا معالجة شخص في حال تواجد المسعفين لتجنب المحاسبة الادارية", "يجب عليك طلب ومسعف والانتظار , ويمنع نقل المسقط بدون طلب مسعف , خلاف ذلك بيتم محاسبتك اداريًا"]
         };
         if(userData && userData.role === 'Support' && cat !== 'summon') { box.innerHTML = '<p style="color:var(--danger)">مسموح لك فقط بقسم الاستدعاء.</p>'; return; }
         if(reportsMap[cat]) reportsMap[cat].forEach(r => {
@@ -856,4 +856,5 @@
 </script>
 </body>
 </html>
+
 
