--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
             <div class="card">
                 <div style="display:flex; justify-content:space-between; align-items:center;">
-                    <h3>❓ قائمة الأسئلة</h3>
+                    <h3>❓ قائمة الأسئلة (حط إجابات الشخص)</h3>
                     <button class="btn btn-primary btn-sm hidden" id="addQuestionBtn" onclick="openAddQuizModal('questions')">إضافة +</button>
                 </div>
                 <div id="quizContainer" style="margin-top: 15px;"></div>
@@ -903,3 +903,4 @@
 
 </body>
 </html>
+
