--- a/index.html
+++ b/index.html
@@ -727,7 +727,13 @@
             "crime": [ "يجب ان يكون التهديد بشكل مباشر و يمنع التهديد من داخل المركبة" , "يمنع الحلف باي طريقة كانت ويجب عليك تقمص الحياة الواقعيه وابعاد امور الدين بشكل عام تجنباً للمحاسبة الاداريه، وادارة مستري تاون تتمنى لك وقتاً ممتعاً" , "يجب عليك تقدير قيمة مركبتك والقيادة بشكل سليم و تجنب النقزات الغير واقعية, وتقدير حياتك وعدم صدم الاخريين , ادارة مستري تاون تتمنى لك يومأ ممتعأ" , " يمنع منعاً باتاً القيام بأي أعمال (التقديح والاسلوب السيء) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنباً للمحاسبة الادارية ، وادارة مستري تاون تتمنى لك وقتاً ممتعاً ", "يمنع منعاً باتا التخريم او اطلاق النار خلف الجدران لتجنب المحاسبة الادارية ", "يمنع اعطاء كول والتكلم باريحيه وانت مسقط , ويجب عليك تقمص دور المصاب , تجنبا من المحاسبة الادارية", "عزيزي اللاعب يجب عليك التخطيط قبل بدء السرقة ومع التأكد من العدد المشاكرين بالسيناريو , ادارة مستري  تتمنى لك يوم ممتع" , "عزيزي المواطن , للتذكير يمنع كلبشة شخص بدون رفع اليد ويجب عليك الانتظار , خلاف ذالك بيتم محاسبتك بمحاسبة اداريا صارمه"],
             "general": [ "يمنع عليك تكرار البلاغات والسبام بالبلاغات العسكرية او الصحة , في حال تكرارها سيتم محاسبتك اداريًا" , "يمنع منعًا باتًا القيام بأي أعمال ( التقديح والاسلوب السيء ) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنبًا للمحاسبة الادارية .. إدارة ميستري تاون تتمنى لك يومًا ممتعًا" , "يمنع الكذب بالمصطلحات الاتية ( سحر او باخذ حبة او صداع والخ ) .. يعرضك للمحاسبة الادارية" , "يمنع إرتداء او إستعمال اي خوذة اثناء مشاركتك في اي إطلاق ناري" , "يمنع حمل اللاعب اثناء ركوب الدباب ايضًا المركبة" , "في حال إزالة اربع من اطارات السيارة يمنع استكمال القيادة بها", "يمنع منعًا باتًا معالجة شخص في حال تواجد المسعفين لتجنب المحاسبة الادارية", "يجب عليك طلب ومسعف والانتظار , ويمنع نقل المسقط بدون طلب مسعف , خلاف ذلك بيتم محاسبتك اداريًا"]
         };
-        if(userData && userData.role === 'Support' && cat !== 'summon') { box.innerHTML = '<p style="color:var(--danger)">مسموح لك فقط بقسم الاستدعاء.</p>'; return; }
+        
+        // تعديل: Supporter مسموح له فقط بـ summon
+        if(userData && userData.role === 'Supporter' && cat !== 'summon') { 
+            box.innerHTML = '<p style="color:var(--danger); text-align:center; padding:10px;">عذراً، رتبة Supporter مصرح لها فقط باستخدام قسم الاستدعاء.</p>'; 
+            return; 
+        }
+
         if(reportsMap[cat]) reportsMap[cat].forEach(r => {
             const div = document.createElement('div'); div.style.padding = '8px'; div.style.cursor = 'pointer'; div.style.borderBottom = '1px solid var(--border)';
             div.innerHTML = `<input type="radio" name="res" value="${r}"> ${r}`;
@@ -737,10 +743,23 @@
     };
 
     window.copyReport = (type) => {
-        const cat = document.getElementById('repCategory').value, id = document.getElementById('repGameID').value || '0', dId = document.getElementById('repDiscordID').value || 'ID';
-        if(!cat) return showModal("خطأ", "اختر تصنيف البلاغ");
-        const txt = type==='in' ? `/reportr ${id} ${cat}` : `📋 **بلاغ جديد**\n🔹 اللاعب: ${id}\n🔹 الديسكورد: <@${dId}>\n🔹 النوع: ${cat}`;
-        navigator.clipboard.writeText(txt).then(() => showModal("نسخ", "تم نسخ البلاغ بنجاح"));
+        const id = document.getElementById('repGameID').value || '0';
+        const dId = document.getElementById('repDiscordID').value || 'ID';
+        const radio = document.querySelector('input[name="res"]:checked');
+        
+        if(!radio) return showModal("خطأ", "يرجى اختيار سبب الريبورت أولاً");
+        const reason = radio.value;
+
+        let txt = "";
+        if(type === 'in') {
+            // التعديل المطلوب: /reportr ID سبب الريبورت
+            txt = `/reportr ${id} ${reason}`;
+        } else {
+            // التعديل المطلوب: سبب الريبورت ثم المنشن
+            txt = `${reason}\n<@${dId}>`;
+        }
+
+        navigator.clipboard.writeText(txt).then(() => showModal("نسخ", "تم نسخ الريبورت بنجاح للصيغة المطلوبة"));
     };
 
     window.calculateAge = () => {
@@ -860,7 +879,7 @@
                 document.getElementById('addQuestionBtn').classList.remove('hidden'); 
                 document.getElementById('addScenarioBtn').classList.remove('hidden');
             }
-            if(['Admin', 'Management', 'Supporter'].includes(userData.role)) {
+            if(['Admin', 'Management', 'Supporter', 'Support'].includes(userData.role)) {
                 document.getElementById('nav-reports').classList.remove('hidden');
                 document.getElementById('nav-activation').classList.remove('hidden');
             }
@@ -887,7 +906,7 @@
                     let itemsHtml = `<table><tr><th>الاسم</th><th>العدد</th></tr>`;
                     if(d.items && Array.isArray(d.items)) { d.items.forEach(it => { itemsHtml += `<tr><td>${it.name}</td><td>${it.count}</td></tr>`; }); }
                     itemsHtml += `</table>`;
-                    c.innerHTML += `<div class=\\\"card\\\" style=\\\"font-size:0.8rem; background:#0b0e14; padding:15px;\\\"><b style=\\\"color:var(--primary)\\\">📅 ${d.date}</b><div style=\\\"margin-top:10px;\\\">${itemsHtml}</div></div>`; 
+                    c.innerHTML += `<div class=\"card\" style=\"font-size:0.8rem; background:#0b0e14; padding:15px;\"><b style=\"color:var(--primary)\">📅 ${d.date}</b><div style=\"margin-top:10px;\">${itemsHtml}</div></div>`; 
                 });
             });
         } else {
@@ -903,7 +922,3 @@
 
 </body>
 </html>
-
-
-
-
